<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/padding"
        android:text="@string/select_tag"
        />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/html_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:padding="@dimen/paddingSmall"
        android:background="#efefef"
        android:hint="@string/observer_name"
        />

    <EditText
        android:id="@+id/html_field"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/name_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:padding="@dimen/paddingSmall"
        android:background="#efefef"
        android:gravity="top|start"
        android:textSize="11sp"
        android:typeface="monospace"
        tools:text="Test"
        />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/html_field"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="@dimen/padding"
        android:paddingTop="@dimen/paddingSmall"
        android:text="@string/select_tag_hint"
        android:textSize="11sp"
        android:textColor="#888"
        />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        app:layout_constraintTop_toBottomOf="@id/hint"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginBottom="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel"
        />
    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintTop_toBottomOf="@id/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginBottom="@dimen/padding"
        android:text="@string/save"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
